--- a/templates/webhook/mutating-webhook-configuration.yaml
+++ b/templates/webhook/mutating-webhook-configuration.yaml
@@ -3,7 +3,7 @@ kind: MutatingWebhookConfiguration
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: kubediag/serving-cert
-  name: mutating-webhook-configuration
+  name: webhook-configuration
 webhooks:
 - clientConfig:
     caBundle: Cg==
