--- a/values.yaml
+++ b/values.yaml
@@ -10,6 +10,26 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: v0.2.0
 
+admissionWebhooks:
+  failurePolicy: Fail
+  enabled: true
+  ## A PEM encoded CA bundle which will be used to validate the webhook's server certificate.
+  ## If unspecified, system trust roots on the apiserver are used.
+  caBundle: ""
+  ##
+  patch:
+    enabled: true
+    image:
+      repository: jettech/kube-webhook-certgen
+      tag: v1.5.2
+      pullPolicy: IfNotPresent
+    resources: {}
+
+  # Use certmanager to generate webhook certs
+  certManager:
+    enabled: false
+
+##    
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
