--- a/.github/workflows/lint-charts.yml
+++ b/.github/workflows/lint-charts.yml
@@ -3,6 +3,7 @@ name: Lint Charts
 # Controls when the workflow will run
 on:
   pull_request:
+    types: [ assigned, opened, synchronize, reopened ]
     branches:
     - master  
 
