--- a/.github/workflows/lint-charts.yml
+++ b/.github/workflows/lint-charts.yml
@@ -1,11 +1,7 @@
 name: Lint Charts
 
 # Controls when the workflow will run
-on:
-  pull_request:
-    types: [ assigned, opened, synchronize, reopened ]
-    branches:
-    - master  
+on: [ push, pull_request ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
